--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -246,12 +246,18 @@
         bg-secondaryBlack/60
         text-center
         rounded-lg
+        items-center
+        justify-center
+        flex
+        flex-col
         my-1
         mx-2
         backdrop-blur-xl
         backdrop-saturate-[200%]
         overflow-hidden
         p-1
+        self-center
+        w-[90%]
         ;
     }
 }
