--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -220,8 +220,9 @@
         flex-col
         justify-end
         items-end
-        max-w-[250px]
-        overflow-hidden
+        lg:max-w-[250px]
+        w-full
+        
         ;
     }
 }
@@ -230,12 +231,15 @@
         @apply
         h-full
         max-h-[80%]
-        bg-radial from-secondayViolet to-secondaryPink
+        bg-linear-to-t from-secondayViolet/60 to-secondaryPink/80
+        backdrop-blur-lg
         rounded-2xl
         absolute
         w-full
         bottom-0
         -z-10
+        overflow-hidden
+        
         ;
     }
 }
@@ -258,6 +262,8 @@
         p-1
         self-center
         w-[90%]
+        h-full
+        max-h-[100px]
         ;
     }
 }
